# lead-hunter

./: .env.example  .gitignore  pyproject.toml  run.py  serve-demo.py
.claude/: launch.json
config/: __init__.py  settings.py
dashboard/: __init__.py  app.py
dashboard/templates/: base.html  dashboard.html  events_list.html  leads.html  mail_preview.html  organizations.html  upload.html
database/: __init__.py  models.py  session.py
demo-sites/: index.html
demo-sites/key-visual/: index.html
demo-sites/meetup-matcher/: index.html  sample_participants.csv
docs/: EpicStage_AI밋업매칭_제안서.pptx  Epic_Studio_400에러_분석.md  meetup_epicstage_UI개선_보고서.docx
docs/key-visual/: index.html
docs/meetup-matcher/: index.html
mailer/: __init__.py  sender.py
mailer/templates/: default.html
mailer/templates/key-visual/: default.html
mailer/templates/meetup-matcher/: default.html
mailer/tracking/: __init__.py
scraper/: __init__.py  base.py  engine.py
scraper/parsers/: __init__.py
scraper/sources/: __init__.py  eventbrite.py  festa.py  gov_events.py  kstartup.py
